<package>
  <name>carterman_driver_msgs</name>
  <version>0.1.0</version>
  <description>The carterman_msgs package</description>
  <author>Chad Attermann</author>
  <maintainer email="robotlabvn@gmail.com">Tri B.M</maintainer>
  <license>BSD</license>
  <url>https://github.com/</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
